--- a/michael/package.json
+++ b/michael/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-firebase-recaptcha": "~2.1.0",
+    "expo-sms": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.11",
     "react": "17.0.1",
