--- a/michael/package.json
+++ b/michael/package.json
@@ -17,6 +17,7 @@
     "expo-firebase-recaptcha": "~2.1.0",
     "expo-sms": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "firebase": "^9.6.11",
     "react": "17.0.1",
     "react-dom": "17.0.1",
