--- a/michael/package.json
+++ b/michael/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-contacts": "~10.1.0",
     "expo-firebase-recaptcha": "~2.1.0",
     "expo-sms": "~10.1.0",
     "expo-status-bar": "~1.2.0",
@@ -22,6 +23,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
