--- a/michael/package.json
+++ b/michael/package.json
@@ -10,12 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-contacts": "~10.1.0",
+    "expo-device": "~4.1.0",
     "expo-firebase-recaptcha": "~2.1.0",
+    "expo-linking": "~3.0.0",
+    "expo-notifications": "~0.14.0",
     "expo-sms": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
