--- a/michael/package.json
+++ b/michael/package.json
@@ -15,9 +15,12 @@
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
     "expo-contacts": "~10.1.0",
     "expo-device": "~4.1.0",
     "expo-firebase-recaptcha": "~2.1.0",
+    "expo-image-manipulator": "~10.2.0",
+    "expo-image-picker": "~12.0.1",
     "expo-linking": "~3.0.0",
     "expo-notifications": "~0.14.0",
     "expo-sms": "~10.1.0",
