--- a/michael/package.json
+++ b/michael/package.json
@@ -32,7 +32,9 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-pager-view": "5.4.9",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
