--- a/michael/package.json
+++ b/michael/package.json
@@ -2,6 +2,7 @@
   "name": "michael",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "proxy": "http://localhost:4000",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -30,8 +31,10 @@
     "firebase": "^9.6.11",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-google-login": "^5.2.2",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-pager-view": "5.4.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
