--- a/michael/package.json
+++ b/michael/package.json
@@ -1,11 +1,10 @@
 {
   "name": "michael",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -13,16 +12,21 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
-    "expo": "~44.0.0",
+    "expo": "^44.0.6",
+    "expo-calendar": "~10.1.0",
+    "expo-camera": "~12.1.2",
+    "expo-cli": "^5.4.3",
     "expo-contacts": "~10.1.0",
     "expo-firebase-recaptcha": "~2.1.0",
     "expo-sms": "~10.1.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "firebase": "^9.6.11",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-calendar-events": "^2.2.0",
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
