--- a/michael/app.json
+++ b/michael/app.json
@@ -19,7 +19,10 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
-        "NSRemindersUsageDescription": "Requires calendar read access to easily import user availability"
+        "NSRemindersUsageDescription": "This app uses your calendar to find overlapping availability between groups of friends",
+        "NSCameraUsageDescription": "This app uses the camera to let people upload profile pictures",
+        "NSContactsUsageDescription": "This app uses contacts to let you easily add your friends",
+        "NSPhotoLibraryUsageDescription": "This app uses the photo library to let people upload profile pictures"
       },
       "bundleIdentifier": "com.dindintheapp",
       "buildNumber": "2"
