--- a/michael/package.json
+++ b/michael/package.json
@@ -23,6 +23,7 @@
     "expo-cli": "^5.4.3",
     "expo-contacts": "~10.1.0",
     "expo-device": "~4.1.0",
+    "expo-firebase-analytics": "~6.0.0",
     "expo-firebase-recaptcha": "~2.1.0",
     "expo-image-manipulator": "~10.2.0",
     "expo-image-picker": "~12.0.1",
